--- a/sanity-yt-build/package.json
+++ b/sanity-yt-build/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@next/font": "13.1.1",
+    "@sanity/client": "^3.4.1",
     "@sanity/image-url": "^1.0.1",
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
@@ -21,6 +22,7 @@
     "next-sanity-image": "^5.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.41.2",
     "react-portable-text": "^0.5.1",
     "typescript": "4.9.4"
   },
